--- a/modgui/bolliedelayxt.css
+++ b/modgui/bolliedelayxt.css
@@ -8,13 +8,12 @@
     background-image:url(/resources/background.png{{{ns}}});
     background-position:center center;
     background-repeat:no-repeat;
-    background-size:640px 320px;
+    background-size:650px 500px;
     border-radius: 21px;
-    height:312px;
+    height:500px;
     position:absolute;
-    width:623px;
-    padding: 10px 10px 10px 5px;
-    text-align: center;
+    width:650px;
+    padding: 10px 10px 10px 10px;
 }
 
 /* = Labels
@@ -23,8 +22,8 @@
 .bolliedelay .bollie-plugin-name {
     overflow:hidden;
     position:absolute;
-    left:260px;
-    bottom: 0px;
+    right:20px;
+    bottom: 15px;
     text-align:center;
     text-transform:uppercase;
 }
@@ -32,7 +31,7 @@
 .bolliedelay .bollie-plugin-name h1 {
     font-family:"cooper hewitt", Sans-serif !important;
     font-weight: bold;
-    font-size:80px;
+    font-size:30px;
     color: #898989;
     line-height:1;
 }
@@ -46,69 +45,16 @@
     position: absolute;
 }
 
-.bolliedelay .bollie-label.bypass {
-    bottom: 10px;
-    left: 145px;
-}
-
-.bolliedelay .bollie-label.tap {
-    bottom: 10px;
-    right: 40px;
-}
-
 /* = LIGHT ON/OFF
 ================================================ */
 .bolliedelay .mod-light {
     background-position:center center;
     background-repeat:no-repeat;
-    bottom:58px;
-    height:32px;
+    bottom:35px;
+    height:20px;
     width:32px;
-    left:125px;
+    left:80px;
     position:absolute;
-}
-
-/* = FOOTSWITCH
-================================================ */
-.bolliedelay .mod-footswitch {
-    background-image:url(/resources/footswitch.png{{{ns}}});
-    background-position:bottom center;
-    background-repeat:no-repeat;
-    background-size:auto 132px;
-    cursor:pointer;
-    height:66px;
-    width: 66px;
-    margin: 4px auto 0 auto;
-    position: absolute;
-    left: 180px;
-    bottom: 12px;
-    z-index: 20;
-}
-
-.bolliedelay .mod-footswitch.on {
-    background-position: top center !important;
-}
-
-
-/* = Push Buttons
-================================================ */
-.bolliedelay .mod-pushbutton {
-    background-image:url(/resources/footswitch.png{{{ns}}});
-    background-position:top center;
-    background-repeat:no-repeat;
-    background-size:auto 132px;
-    cursor:pointer;
-    height: 66px;
-    width: 66px;
-    margin: 4px auto 0 auto;
-    position: absolute;
-    bottom: 12px;
-    right: 50px;
-    z-index: 20;
-}
-
-.bolliedelay .mod-pushbutton.on {
-    background-position: bottom center !important;
 }
 
 /* = Toggle
@@ -128,6 +74,21 @@
     background-position: top center !important;
 }
 
+.bolliedelay .mod-toggle.bypass {
+    background-image:url(/resources/toggle.png{{{ns}}});
+    background-position:bottom center;
+    background-repeat:no-repeat;
+    background-size:auto 120px;
+    cursor:pointer;
+    height: 60px;
+    width: 43px;
+    margin: 4px auto 0 auto;
+    position: absolute;
+    left: 30px;
+    bottom: 15px;
+    z-index:30;
+}
+
 
 /* = KNOBS
 ================================================ */
@@ -139,9 +100,10 @@
     border-style: solid;
     border-width: 1px;
     border-color: #888888;
-    width: auto;
+    width: 305px;
     display:inline-block;
     padding: 2px 2px 0px 2px;
+    text-align: center;
 }
 
 .bolliedelay .bollie-group .mod-knob > span.mod-knob-title {
@@ -160,7 +122,7 @@
     right:0;
     text-transform:uppercase;
     text-align: center;
-    color: #efefef;
+    color: #000000;
 }
 
 .bolliedelay .bollie-group .mod-knob .mod-knob-value {
@@ -171,8 +133,8 @@
     position:absolute;
     right:0;
     z-index:60;
-    color: #32af3e;
-    background-color: #111111;
+    color: #000000;
+    background-color: #ffffff;
     padding: 2px;
     text-align: right;
 }
@@ -185,9 +147,9 @@
     z-index:60;
     padding: 5px;
     top: 23px;
-    color: #32af3e;
+    color: #000000;
     position:absolute;
-    background-color: #111111;
+    background-color: #ffffff;
     text-align: center;
 }
 
@@ -210,7 +172,46 @@
 }
 
 .bolliedelay .bollie-group .mod-knob.bpm {
-    width: 62px;
+    display:inline-block;
+    height:88px;
+    width:200px;
+    margin:1px 1px;
+    overflow:hidden;
+    position:relative;
+    text-align: center;
+}
+
+.bolliedelay .bollie-group .mod-knob.bpm > span.mod-knob-title {
+    bottom:0px;
+    cursor:default;
+    display:block;
+    font-size:11px;
+    font-weight:bold;
+    height:20px;
+    left:0;
+    line-height:1;
+    margin:3px;
+    overflow:hidden;
+    padding:5px;
+    position:absolute;
+    right:0;
+    text-transform:uppercase;
+    text-align: center;
+    color: #000000;
+}
+
+.bolliedelay .bollie-group .mod-knob.bpm .bollie-value{
+    font-size:30px;
+    left:0;
+    line-height:1;
+    right:0;
+    top: 15px;
+    height: 40px;
+    z-index:60;
+    color: #000000;
+    position:absolute;
+    background-color: #ffffff;
+    text-align: center;
 }
 
 /* = ENUMERATED LIST
